# telegram_youtube_downloader

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.override.yml_example  compose.yml  env_dist  main.py  pyproject.toml  requirements.txt  telegram_bot.py  youtube_downloader.py
.github/: FUNDING.yml
.github/workflows/: DockerCI.yaml  docker_daily.yaml  docker_latest.yaml  docker_on_release.yaml
cfg/: options.cfg
compose/: .env.template  .gitignore  apisv.yaml  default.yaml  local.yaml
docs/: API_SERVER.md  CONFIGURATIONS.md  HARDWARE_ACCELERATION.md  SETUP.md
src/: download_thread.py  run.py  telegram_bot.py  telegram_youtube_downloader.py  youtube_downloader.py
src/cfg/: options.cfg
src/configs/: config.yaml
src/errors/: __init__.py  download_error.py  send_error.py
src/utils/: formats.py  logger_factory.py  utils.py
telegram_youtube_downloader/: __main__.py  cli.py  download_thread.py  telegram_bot.py  telegram_media_sender.py  youtube_dl_options.py  youtube_downloader.py  youtube_searcher.py
telegram_youtube_downloader/annotations/: __iniy__.py  telegram_bot_error_handler.py
telegram_youtube_downloader/configs/: config.yaml
telegram_youtube_downloader/data/: app_config.py  dl_format.py  downloader_result.py
telegram_youtube_downloader/decorators/: __iniy__.py  telegram_bot_command_interceptor.py  telegram_bot_error_handler.py
telegram_youtube_downloader/errors/: __init__.py  authorization_error.py  download_error.py  search_error.py  send_error.py
telegram_youtube_downloader/statics/: __init__.py  authorization_mode.py  content_type.py  default_command_type.py
telegram_youtube_downloader/utils/: api_key_utils.py  config_utils.py  formats.py  logger_factory.py  logger_utils.py  sanitization_utils.py  statics.py  utils.py
terraform/: .gitignore
terraform/aws/: .terraform.lock.hcl  ec2.tf  key.tf  outputs.tf  provider.tf  security.tf  variables.tf
