[project]
name = "telegram-youtube-downloader"
version = "5.2.0"
description = "Telegram bot for downloading video or audio from multiple sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dacite==1.9.2",
    "python-telegram-bot==22.6",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "yt-dlp",
    "isodate==0.7.2",
    "google-api-python-client==2.189.0",
]
