[project]
name = "telegram-youtube-downloader"
version = "5.3.0"
description = "Telegram bot for downloading video or audio from multiple sites"
requires-python = ">=3.14"
dependencies = [
    "dacite==1.9.2",
    "python-telegram-bot==22.7",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "yt-dlp",
    "isodate==0.7.2",
    "google-api-python-client==2.196.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409,<2",
    "ruff>=0.15.13,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_youtube_downloader"]

[project.scripts]
telegram_youtube_downloader = "telegram_youtube_downloader.__main__:bootstrap"
tyd = "telegram_youtube_downloader.__main__:bootstrap"

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
length-sort = true
lines-after-imports = 2
known-first-party = ["telegram_youtube_downloader"]

[tool.uv]
exclude-newer = "3d"
